--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "debug": "~2.2.0",
     "ejs": "~2.5.2",
     "express": "~4.14.0",
+    "mongodb": "^2.2.16",
     "morgan": "~1.7.0",
+    "multer": "^1.2.1",
+    "mv": "^2.1.1",
     "serve-favicon": "~2.3.0",
-    "stylus": "0.54.5"
+    "stylus": "0.54.5",
+    "unzip": "^0.1.11"
   }
 }
