--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "ejs": "~2.5.2",
+    "epub": "^0.1.6",
     "express": "~4.14.0",
+    "inliner": "^1.10.1",
     "mongodb": "^2.2.16",
     "morgan": "~1.7.0",
     "multer": "^1.2.1",
     "mv": "^2.1.1",
+    "pify": "^2.3.0",
     "serve-favicon": "~2.3.0",
     "stylus": "0.54.5",
     "unzip": "^0.1.11"
