--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "~2.5.2",
     "epub": "^0.1.6",
     "express": "~4.14.0",
+    "fs-extra": "^2.0.0",
     "inliner": "^1.10.1",
     "mongodb": "^2.2.16",
     "morgan": "~1.7.0",
